fix double to int conversion crash